# bb_rosbag_record

./: CMakeLists.txt  package.xml  setup.py
config/: rosbag_recorder_config_carecules.yaml  rosbag_recorder_config_careculino.yaml
launch/: carecules_rosbag_recorder.launch
scripts/: bb_rosbag_record.py
srv/: bb_rosbag_player.srv  bb_rosbag_recorder.srv
